force-app/main/default/objects/Employee_Mileage__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Commute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>