force-app/main/default/objects/Employee_Mileage__c/fields/Bi_Weekly_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Bi_Weekly_Reimbursement__c</fullName>
    <label>Bi Weekly Reimbursement</label>
    <referenceTo>Bi_Weekly_Reimbursement__c</referenceTo>
    <relationshipLabel>Employees Mileage</relationshipLabel>
    <relationshipName>Employees_Mileage</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>