force-app/main/default/objects/Employee_Mileage__c/fields/Origin_Equal_Destination__c.field-meta.xml
<CustomField>
    <fullName>Origin_Equal_Destination__c</fullName>
    <formula>IF(Trip_Origin__c &lt;&gt; null &amp;&amp; Trip_Destination__c &lt;&gt; null, IF( Trip_Origin__c == Trip_Destination__c , true, false), false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin Equal Destination</label>
    <type>Checkbox</type>
</CustomField>