force-app/main/default/objects/Employee_Mileage__c/fields/Original_Destination_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Destination_Name__c</fullName>
    <label>Original Destination Name</label>
    <type>TextArea</type>
</CustomField>