force-app/main/default/objects/Employee_Mileage__c/fields/Original_Origin_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Origin_Name__c</fullName>
    <label>Original Origin Name</label>
    <type>TextArea</type>
</CustomField>