force-app/main/default/objects/Employee_Mileage__c/fields/Time_In_High_Risk__c.field-meta.xml
<CustomField>
    <fullName>Time_In_High_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time In High Risk</label>
    <type>Checkbox</type>
</CustomField>