force-app/main/default/objects/Employee_Mileage__c/fields/Variable__c.field-meta.xml
<CustomField>
    <fullName>Variable__c</fullName>
    <formula>IF(ISPICKVAL(Activity__c,&quot;Business&quot;),ROUND(Variable_Rate__c,4)* Mileage__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>